tests/baselines/reference/unusedSwitchStatment.errors.txt
tests/cases/compiler/unusedSwitchStatment.ts(3,10): error TS2678: Type '0' is not comparable to type '1'.
tests/cases/compiler/unusedSwitchStatment.ts(4,13): error TS6133: 'x' is declared but never used.
tests/cases/compiler/unusedSwitchStatment.ts(7,15): error TS6133: 'c' is declared but never used.
tests/cases/compiler/unusedSwitchStatment.ts(10,13): error TS6133: 'z' is declared but never used.
tests/cases/compiler/unusedSwitchStatment.ts(15,10): error TS2678: Type '0' is not comparable to type '2'.
tests/cases/compiler/unusedSwitchStatment.ts(17,10): error TS2678: Type '1' is not comparable to type '2'.


==== tests/cases/compiler/unusedSwitchStatment.ts (6 errors) ====
    
    switch (1) {
        case 0:
             ~
!!! error TS2678: Type '0' is not comparable to type '1'.
            let x;
                ~
!!! error TS6133: 'x' is declared but never used.
            break;
        case 1:
            const c = 1;
                  ~
!!! error TS6133: 'c' is declared but never used.
            break;
        default:
            let z = 2;
                ~
!!! error TS6133: 'z' is declared but never used.
    }
    
    
    switch (2) {
        case 0:
             ~
!!! error TS2678: Type '0' is not comparable to type '2'.
            let x;
        case 1:
             ~
!!! error TS2678: Type '1' is not comparable to type '2'.
            x++;
    }